--- a/style.css
+++ b/style.css
@@ -9,11 +9,15 @@ body {
   margin: auto;
 }
 
+dt {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 h1, h2, h3 {
   color: #3F3F3F;
   margin-top: 20px;
   margin-bottom: 10px;
-  /*text-align:center;*/
 }
 
 h1 {
@@ -25,7 +29,6 @@ h1 {
 h2 {
   font-size: 24px;
   font-weight: bold;
-/*  border-bottom: 1px solid #aaa;*/
 }
 
 hr {
@@ -40,12 +43,7 @@ h2:before {
   height: 12px;
   background-color: #aaa;
 }
-/*
-h2:after {
-  content: " #";
-  cursor: pointer;
-}
-*/
+
 h3 {
   font-size: 18px;
   font-weight: bold;
